fix: ensure focus outline color has enough contrast (#11463)
Make sure the focus outline color has enough contrast regardless of what
the accent color is. I.e., allow using a light accent color in light
mode, and a dark accent color in dark mode.

--- a/packages/aura/src/color.css
+++ b/packages/aura/src/color.css
@@ -32,7 +32,10 @@
   );
   --aura-app-background: var(--aura-background-color);
 
-  --vaadin-focus-ring-color: var(--aura-accent-color);
+  --vaadin-focus-ring-color: light-dark(
+    oklch(from var(--aura-accent-color-light) min(l, 0.62) c h),
+    oklch(from var(--aura-accent-color-dark) max(l, 0.62) c h)
+  );
   --vaadin-user-color: var(--aura-blue);
   color: var(--vaadin-text-color);
   background: var(--aura-app-background);
